Ok actually done now

--- a/app/views/pokemons/new.html.erb
+++ b/app/views/pokemons/new.html.erb
@@ -1,3 +1,3 @@
-<%= simple_form_for @pokemon do |poke| %>
-  <%= poke.input :name, placeholder: 'Pikachu' %>
+<%= simple_form_for @pokemon, :url => create_path do |poke| %>
+  <%= poke.input :name %>
 <% end %>
