--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -9,5 +9,7 @@
         <%= button_to "Damage!", damage_path(id: poke.id), :class => "button small", :method => :patch %>
     </li>
     <% end %>
-    <%= button_to "Create new Pokemon!", new_path, :class => "button medium", :method => :patch %>
+    <% if @trainer == current_trainer %>
+        <%= button_to "Create a new Pokemon!", new_path, :class => "button medium", :method => :get %>
+    <% end %>
 </p>
